  It doesn't work yet, but will be great when it does!
- Get new inheritance chain code to compile under MS Win (Roy Sutton)
- Fix DC.h and WindowDC.i to properly handle pure virtual methods, 
  allowing the caret sample to work again
- Fixed ControlWithItems, Choice, ComboBox and ListBox to properly 
  handle virtual methods, allowing the controls sample to work again


====0.0.27 tag included all of this:===
- Added full inheritance to all classes
- Fixed parent of ProgressDialog to be Dialog


====0.0.26 tag included all of this:===
- Greatly enhanced Grid support (Sean Long)


====0.0.25 tag included all of this:===
- Added src/.cvsignore
- Added Button constants (BU_XXX)
- Added TextAttr class (Alex Fenton)
- Fixed some bugs in caret sample (Roy Sutton)
- Added Listbook support and a sample (Sean Long)
  (Note: On Linux, the sample just shows a blank window)
- Added missing LayoutConstraints#centre_x and centre_y (Roy Sutton)
- Added SplitterWindow (thanks to Roy Sutton)
- Added TreeCtrl (compiles and can be new'd, but might segfault)
- Minor fix to calendar sample (Roy Sutton)
- Fix how Calendar enums were being defined, so the calendar sample
  "highlight special dates" menu item now works (Roy Sutton)
- Fix typo in listbook sample data (Roy Sutton)
- Fixed TreeCtrl to compile under MS Windows (Roy Sutton)
- Enabled Window#get_validator
- Adjusted TextCtrl.i and Control.i to %import their parent 
  classes so all the inherited virtual methods are wrapped by 
  the Director. This needs to be done for *all* classes.
- Added Validator class [no working sample yet] (Roy Sutton)
  

====0.0.24 tag included all of this:===
- Restored SWIG 1.3.24 compatibility (not yet tested extensively)
- Icon patch from Sean Long for MS Win compatibility
- rakemswin.rb patch from Sean Long to properly pass __MSWIN__
  flag into swig
- samples/dialogs/dialogs.rb improvement from Roy Sutton
- Added WXTYPE typedef so methods like Event.get_event_type 